# challenge-7_-group7-

./: README.md  pyproject.toml
runs/feature_extraction_seed_123/: events.out.tfevents.1780176244.DESKTOP-DS8V5EV.17636.4
runs/feature_extraction_seed_42/: events.out.tfevents.1780174076.DESKTOP-DS8V5EV.5756.0  events.out.tfevents.1780174145.DESKTOP-DS8V5EV.17636.0
runs/fine_tuning_seed_123/: events.out.tfevents.1780176875.DESKTOP-DS8V5EV.17636.5
runs/fine_tuning_seed_42/: events.out.tfevents.1780174767.DESKTOP-DS8V5EV.17636.1
runs/style_augmentation_seed_42/: events.out.tfevents.1780176005.DESKTOP-DS8V5EV.17636.3
runs/target_finetune_seed_42/: events.out.tfevents.1780175685.DESKTOP-DS8V5EV.17636.2
src/: main.py
src/data/: dataset.py
src/models/: classifier.py  dann.py  style_transfer.py
src/training/: metrics.py  train_classifier.py  visualizations.py
src/utils/: helpers.py  settings.py
