[project]
name = "ch-7"
version = "0.1.0"
description = ""
authors = [
    {name = "samuel casas-giovani vargas-nahin peñaranda"}
]
requires-python = "3.11.9"
dependencies = [
    "timm (>=1.0.27,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "grad-cam (==1.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
